tree_sitter_v/grammar.js
    source_file: ($) =>
      seq(
        optional($.module_clause),
        optional($.import_list),
        repeat(
          choice(
            seq($._top_level_declaration, optional(semi)),
            seq($._statement, optional(semi)),
          ),
        ),
      ),

    // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
    _top_level_declaration: ($) =>
      choice(
        $.const_declaration,
        $.global_var_declaration,
        $.type_declaration,
        $.function_declaration,
        $.struct_declaration,
        $.enum_declaration,
        $.interface_declaration,
      ),

    // TODO: нужны ли нам тут атрибуты?
    const_declaration: ($) =>
      seq(
        optional($.visibility_modifiers),
        'const',
        choice(
          $.const_definition,
          seq('(', repeat(seq($.const_definition, semi)), ')')
        )
      ),

    const_definition: ($) =>
      seq(
        field('name', $.identifier),
        '=',
        field('value', $._expression)
      ),

    // TODO: нужны ли нам тут атрибуты?
    enum_declaration: ($) =>
      seq(
        field("attributes", optional($.attributes)),
        optional($.visibility_modifiers),
        'enum',
        field("name", $.identifier),
        optional($.enum_backed_type),
        $._enum_body
      ),

    enum_backed_type: ($) => seq('as', $.plain_type),

    _enum_body: ($) =>
      seq(
        "{",
        repeat(seq($.enum_field_definition, optional(terminator))),
        "}"
      ),

    enum_field_definition: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq("=", field("value", $._expression))),
        field('attributes', optional($.attribute)),
      ),


    _expression: ($) =>
      choice(
        $.parenthesized_expression,
        $.call_expression,
        $.type_initializer,
        $.function_literal,
        $.empty_literal_value,
        $.binded_identifier,
        $.reference_expression,
        $._max_group,
        $.map_init_expression,
        $.array_creation,
        $.empty_array_creation,
        $.fixed_array_creation,
        $.unary_expression,
        $.binary_expression,
        $.is_expression,
        $.not_is_expression,
        $.index_expression,
        $.slice_expression,
        // $.type_cast_expression,
        $.as_type_cast_expression,
        $.selector_expression,
        $._expression_with_blocks,
        $.enum_fetch,
      ),

    call_expression: ($) => prec.right(PREC.primary, choice(
      seq(
        field('function', token.immediate('json.decode')),
        field('arguments', $.special_argument_list),
        optional($.error_propagate),
      ),
      seq(
        field('name', $._expression),
        field('type_parameters', optional($.type_parameters)),
        field('arguments', $.argument_list),
        optional($.error_propagate),
      )
    )),

    argument_list: ($) => seq(
      '(',
      optional(seq(
        choice($.argument),
        repeat(seq(list_separator, choice($.argument))),
        optional(list_separator)
      )),
      ')'
    ),

    type_initializer: ($) =>
      prec.right(
        PREC.type_initializer,
        seq(
          field('type', $.plain_type),
          field('body', $.type_initializer_body)
        )
      ),

    type_initializer_body: ($) =>
      seq(
        '{',
        optional(
          choice(
            field('element_list', $.element_list),
            // For short struct init syntax
            field('short_element_list', $.short_element_list)
          )
        ),
        '}'
      ),

    short_element_list: ($) => repeat1(seq($.element, optional(list_separator))),

    element: ($) => $._expression,

    reference_expression: ($) => prec(PREC.primary, $.identifier),
    type_reference_expression: ($) => prec(PREC.primary, $.identifier),

    binary_expression: ($) => {
      const table = [
        [PREC.multiplicative, choice(...multiplicative_operators)],
        [PREC.additive, choice(...additive_operators)],
        [PREC.comparative, choice(...comparative_operators)],
        [PREC.and, '&&'],
        [PREC.or, '||'],
      ];

      return choice(...table.map(([precedence, operator]) =>
        prec.left(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression)
        ))
      ));
    },

    or_block: ($) => seq("or", $.block),

    literal: ($) => choice(
      $.int_literal,
      $.float_literal,
      $._string_literal,
      $.rune_literal,
      $.none,
      $.true,
      $.false,
      $.nil,
    ),

    int_literal: ($) => token(int_literal),

    _string_literal: ($) =>
      choice(
        $.c_string_literal,
        $.raw_string_literal,
        $.interpreted_string_literal
      ),

    interpreted_string_literal: ($) =>
      interpolated_quoted_string($, $._string_opening),

    string_interpolation: ($) =>
      choice(
        seq(
          $._braced_interpolation_opening,
          $._expression,
          optional($.format_specifier),
          $._interpolation_closing
        ),
        // NOTE: The "unbraced" version of the string interpolation
        // after the implementation of a string_content external
        // token only recognizes identifier for now.
        seq(
          $._unbraced_interpolation_opening,
          choice(
            $.identifier,
            $.selector_expression,
            // NOTE: Call expression is commented for now
            // because of the weird issues with the custom external
            // scanner implementation of the string literal.
            // $.call_expression,
          )
        )
      ),

    identifier: ($) =>
      token(
        seq(
          optional('@'),
          choice(unicode_letter, "_"),
          repeat(choice(letter, unicode_digit))
        ),
      ),

    // Some of the syntaxes in V are restricted
    // to be in a single line. That's why an identifier
    // immediate token is created to solve this concern.
    visibility_modifiers: ($) =>
        prec.left(
            choice(
                'pub',
                '__global',
            )
        ),

    expression_list: ($) =>
      prec(PREC.resolve, comma_sep1(choice($._expression, $.mutable_expression))),

    // TODO: any expression on the right that is recognized
    // as external tokens will be deduced as separate nodes
    // instead of having under the same expression_list node
    _expression_list_repeat1: ($) =>
      seq(
        choice(
          $._expression,
          $.mutable_expression
        ),
        repeat1(
          seq(
            ",",
            choice(
              $._expression,
              $.mutable_expression
            )
          )
        )
      ),

    plain_type: ($) =>
      prec.right(PREC.primary,
        choice(
          $.type_reference_expression,
          // $.builtin_type,
          $._binded_type,
          $.qualified_type,
          $.pointer_type,
          $.array_type,
          $.fixed_array_type,
          $.function_type,
          $.generic_type,
          $.map_type,
          $.channel_type,
          $.shared_type,
          $.thread_type,
          $.none_type,
        ),
      ),

    _binded_type: ($) => prec.right(alias($.binded_identifier, $.binded_type)),

    qualified_type: ($) =>
      seq(
        field("module", $.identifier),
        ".",
        field("name", $.type_reference_expression)
      ),

    _statement_list: ($) =>
      repeat1(seq(
        $._statement,
        optional($._automatic_separator)
      )),

    _statement: ($) =>
      choice(
        $.simple_statement,
        $.assert_statement,
        $.continue_statement,
        $.break_statement,
        $.return_statement,
        $.asm_statement,
        $.go_statement,
        $.spawn_statement,
        $.goto_statement,
        $.labeled_statement,
        $.defer_statement,
        $.for_statement,
        $.compile_time_for_statement,
        $.send_statement,
        $.block,
        $.hash_statement
      ),

    simple_statement: ($) =>
      choice(
        $.var_declaration,
        $._expression,
        $.inc_statement,
        $.dec_statement,
        $.assignment_statement,
      ),

    send_statement: ($) =>
      prec(
        PREC.unary,
        seq(
          field("channel", $._expression),
          "<-",
          field("value", $._expression)
        )
      ),

    var_declaration: ($) =>
      prec.right(
          seq(
              field("var_list", $.expression_list),
              ":=",
              field("expression_list", $.expression_list)
          )
      ),

    assignment_statement: ($) =>
      seq(
        field("left", $.expression_list),
        field("operator", choice(...assignment_operators)),
        field("right", $.expression_list)
      ),

    assert_statement: ($) => seq('assert', $._expression),

    block: ($) =>
      seq(
        "{",
        optional(choice(
          $._statement_list,
          alias($._expression_list_repeat1, $.expression_list),
          alias($.empty_labeled_statement, $.labeled_statement),
          seq(
            $._statement_list,
            choice(
              alias($._expression_list_repeat1, $.expression_list),
              alias($.empty_labeled_statement, $.labeled_statement)
            )
          )
        )),
        "}"
      ),

    return_statement: ($) =>
      prec.right(seq('return', optional(field("expression_list", $.expression_list)))),

    selector_expression: ($) =>
      prec(
        PREC.primary,
        seq(
          field("operand", choice(
            $._expression,
            $.compile_time_identifier
          )),
          ".",
          field(
            "field",
            choice(
              $.reference_expression,
              // $.type_reference_expression,
              $.compile_time_identifier,
              $.compile_time_selector_expression
            )
          )
        )
      ),

    attributes: ($) =>
        repeat1(seq($.attribute, optional(terminator))),

    attribute: ($) =>
        seq("[", seq($.attribute_expression, repeat(seq(";", $.attribute_expression))), "]"),

    attribute_expression: ($) =>
      prec(
        PREC.attributes,
        choice(
          $.if_attribute,
          $._plain_attribute,
        )
      ),

    // [if some ?]
    _plain_attribute: ($) => choice(
        $.literal_attribute,
        $.value_attribute,
        $.key_value_attribute
    ),

    // ['/query']
    value_attribute: ($) => prec(
        PREC.attributes,
        field("name", choice(alias("unsafe", $.type_reference_expression), $.type_reference_expression)),
    ),

    // [key]
    // [key: value]
    key_value_attribute: ($) => prec(
      PREC.attributes,
      seq(
        $.value_attribute,
        ":",
        field("value", choice($.literal, $.identifier))
      ),
    ),
