tree_sitter_v/test/corpus/const_declaration.txt
================================================================================
Simple constant
================================================================================
const name = 100
--------------------------------------------------------------------------------

(source_file
  (const_declaration
    (const_definition
      (identifier)
      (literal
        (int_literal)))))

================================================================================
Several constants
================================================================================
const name = 100
const other = 100
--------------------------------------------------------------------------------

(source_file
  (const_declaration
    (const_definition
      (identifier)
      (literal
        (int_literal))))
  (const_declaration
    (const_definition
      (identifier)
      (literal
        (int_literal)))))

================================================================================
Several constants with visibility modifiers
================================================================================
const name = 100
pub const other = 100
--------------------------------------------------------------------------------

(source_file
  (const_declaration
    (const_definition
      (identifier)
      (literal
        (int_literal))))
  (const_declaration
    (visibility_modifiers)
    (const_definition
      (identifier)
      (literal
        (int_literal)))))

================================================================================
Multiline constant
================================================================================
const (
    name = 100
)
--------------------------------------------------------------------------------

(source_file
  (const_declaration
    (const_definition
      (identifier)
      (literal
        (int_literal)))))

================================================================================
Multiline constant in one line
================================================================================
const ( name = 100 )
--------------------------------------------------------------------------------

(source_file
  (const_declaration
    (const_definition
      (identifier)
      (literal
        (int_literal)))))

================================================================================
Multiline constants
================================================================================
const (
    name = 100
    other = 100
)
--------------------------------------------------------------------------------

(source_file
  (const_declaration
    (const_definition
      (identifier)
      (literal
        (int_literal)))
    (const_definition
      (identifier)
      (literal
        (int_literal)))))

================================================================================
Multiline constants with visibility modifiers
================================================================================
pub const (
    name = 100
    other = 100
)
--------------------------------------------------------------------------------

(source_file
  (const_declaration
    (visibility_modifiers)
    (const_definition
      (identifier)
      (literal
        (int_literal)))
    (const_definition
      (identifier)
      (literal
        (int_literal)))))

================================================================================
Simple constant with attribute
================================================================================
[attr]
const name = 100
--------------------------------------------------------------------------------

(source_file
  (const_declaration
    (attributes
      (attribute
        (attribute_expression
          (value_attribute
            (reference_expression
              (identifier))))))
    (const_definition
      (identifier)
      (literal
        (int_literal)))))

================================================================================
Multiline constants with attributes
================================================================================
[attr]
[attr2]
pub const (
    name = 100
    other = 100
)
--------------------------------------------------------------------------------

(source_file
  (const_declaration
    (attributes
      (attribute
        (attribute_expression
          (value_attribute
            (reference_expression
              (identifier)))))
      (attribute
        (attribute_expression
          (value_attribute
            (reference_expression
              (identifier))))))
    (visibility_modifiers)
    (const_definition
      (identifier)
      (literal
        (int_literal)))
    (const_definition
      (identifier)
      (literal
        (int_literal)))))
